# kcrw-feed

./: .gitignore  README.md  config.yaml  kcrw_catalog.json  kcrw_feed.json  kcrw_feed.rss  pyproject.toml
.github/workflow/: feed.yaml
feeds/: dan-wilcox.xml  henry-rollins.xml  morning-becomes-eclectic.xml  ro-wyldeflower-contreras.xml
kcrw_feed/: config.py  main.py  models.py  persistent_logger.py  show_gatherer.py  show_index.py  show_processor.py  sitemap_processor.py  source_manager.py  state_manager.py  station_catalog.py  updater.py  utils.py
kcrw_feed/data/: default_config.yaml
kcrw_feed/persistence/: base.py  feeds.py  manager.py  state.py
kcrw_feed/processing/: resources.py  station.py
tests/: README.md  conftest.py  test_config.py  test_e2e.py  test_example.py  test_models.py  test_persistent_logger.py  test_show_gatherer.py  test_show_index.py  test_show_processor.py  test_sitemap_processor.py  test_source_manager.py  test_state_manager.py  test_station_catalog.py  test_utils.py
tests/data/: config.yaml  docker-compose.yml  kcrw_catalog.json  kcrw_feed.json  robots.txt
tests/data/feeds/: henry-rollins.xml  ro-wyldeflower-contreras.xml
tests/data/henry-rollins/: kcrw-broadcast-821-2025-01-04_player.json  kcrw-broadcast-822_player.json  kcrw-broadcast-825
tests/data/henry-rollins/kcrw-broadcast-820/: player.json
tests/data/music/shows/henry-rollins/: microdata_episode_example.py  microdata_show_example.py
tests/data/music/shows/henry-rollins/kcrw-broadcast-817/: player.json
tests/data/music/shows/henry-rollins/kcrw-broadcast-818/: player.json
tests/data/music/shows/henry-rollins/kcrw-broadcast-819/: player.json
tests/data/music/shows/henry-rollins/kcrw-broadcast-821/: player.json
tests/data/music/shows/henry-rollins/kcrw-broadcast-821-2025-01-04/: player.json
tests/data/music/shows/ro-wyldeflower-contreras/: index.html
tests/data/music/shows/ro-wyldeflower-contreras/ro-wyldeflower-contreras-playlist-december-18-2024/: player.json
tests/data/music/shows/ro-wyldeflower-contreras/ro-wyldeflower-contreras-playlist-january-15-2025/: player.json
tests/data/music/shows/ro-wyldeflower-contreras/ro-wyldeflower-contreras-playlist-january-22-2025/: player.json
tests/data/music/shows/ro-wyldeflower-contreras/ro-wyldeflower-contreras-playlist-january-25-2025/: player.json
tests/henry-rollins/: henry-rollins  kcrw-broadcast-821_player.json.orig  kcrw-broadcast-824_player.json  kcrw-broadcast-825_player.json
tests/persistence/: test_feeds.py  test_logger.py  test_manager.py  test_state.py
tests/processing/: test_resources.py  test_station.py
