[project]
name = "kcrw-feed"
version = "0.1.0"
description = "This project generates RSS/Atom feeds for KCRW music shows"
license = { text = "GPL-3.0-only" }
authors = [
    {name = "Marc Alvidrez",email = "cram@greenavenger.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "feedgenerator (>=2.1.0,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "extruct (>=0.18.0,<0.19.0)",
    "w3lib (>=2.3.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "fsspec (>=2025.2.0,<2026.0.0)"
]

[tool.poetry.scripts]
kcrw-feed = "kcrw_feed.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
