[project]
name = "kcrw-feed"
version = "0.1.0"
description = "This project generates RSS/Atom feeds for KCRW music shows"
license = { text = "GPL-3.0-only" }
authors = [
    {name = "Marc Alvidrez",email = "cram@greenavenger.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "feedgenerator (>=2.1.0,<3.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "extruct (>=0.18.0,<0.19.0)",
    "w3lib (>=2.3.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "fsspec (>=2025.2.0,<2026.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "feedgen (>=1.0.0,<2.0.0)",
    "deepdiff (>=8.4.2,<9.0.0)",
    "atomicwrites (>=1.4.1,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "kcrw_feed" }]

[tool.poetry.scripts]
kcrw-feed = "kcrw_feed.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "kcrw_feed"